Kubernetes/Objetos/App2/ConfigApps/01-app-express-deplyment-v1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: appexpress
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: appexpress
    spec:
      containers:
      - name: sbapp
        image: sanchezbuitrago/appexpress:latest
        imagePullPolicy: Always        
        ports:
        - containerPort: 3000
