Kubernetes/Objetos/App2/ConfigApps/01-hello-app-deployment-v1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-v1
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-v1
    spec:
      containers:
      - name: sbapp
        image: sanchezbuitrago/appexpress:latest
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
