Kubernetes/Objetos/App2/ConfigApps/02-apprest-deployment-v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: apprest
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: apprest
    spec:
      containers:
      - name: sbapp
        image: sanchezbuitrago/apprest:latest
        imagePullPolicy: Always        
        ports:
        - containerPort: 3000
