Kubernetes/Objetos/App2/ConfigApps/02-hello-app-deployment-v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-v2
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-v2
    spec:
      containers:
      - name: sbapp
        image: sanchezbuitrago/apprest:latest
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
