Kubernetes/Objetos/App2/ConfigApps/03-appexpress-svc-v1.yaml
kind: Service
apiVersion: v1
metadata:
  name: appexpress-v1-svc
spec:
  selector:
    app: appexpress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
