Kubernetes/Objetos/App2/ConfigApps/03-hello-svc-v1.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-v1-svc
spec:
  selector:
    app: hello-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
