Kubernetes/Objetos/App2/ConfigApps/04-apprest-svc-v2.yaml
kind: Service
apiVersion: v1
metadata:
  name: apprest-v2-svc
spec:
  selector:
    app: apprest
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
