Kubernetes/Objetos/App2/ConfigApps/04-hello-svc-v2.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-v2-svc
spec:
  selector:
    app: hello-v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
